# IE0521

./: README.md
Parte01/: README.md
Parte01/include/: L1cache.h  debug_utilities.h
Parte01/src/: CMakeLists.txt  L1cache.cpp  Makefile  SimMakefile  main.cpp
Parte01/test/: L1cache_test.cpp
Parte02/include/: L1cache.h
Parte02/src/: L1cache.cpp  Makefile  SimMakefile  debug_utilities.cpp  main.cpp
Parte02/test/: CMakeLists.txt  L1cache_test.cpp
